# basic-plotter

./: Cargo.toml  LICENSE  README.md  data.txt
src/: client.rs  common.rs  coordinates.rs  file_read.rs  lib.rs  main.rs  rendering_system.rs  server.rs
