[package]
name = "plotter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttf-parser="0.9.0"
image="*"
rusttype="*"
rand ="*"
serde ={version = "1.0", features=["derive"]}
serde_json = "1.0"
json = "*"

[dependencies.sdl2]
version = "0.34"
features = ["image"]
